--- a/src/stylesheets/page.module.css
+++ b/src/stylesheets/page.module.css
@@ -9,3 +9,11 @@
     position: relative;
     left: 7.5%;
 }
+.about-me-pic {
+    position: relative;
+    width: 250px;
+    padding-top: 20px;
+    padding-left: 25px;
+    padding-bottom: 20px;
+    right: 10px;
+}
